# csv-inspector

./: .gitignore  CMakeLists.txt
.github/workflows/: ci.yml
include/: core.h
src/: core.c  main.c
tests/: test_core.c  test_runner.c
